--- a/client/src/screens/PostEdit/PostEdit.css
+++ b/client/src/screens/PostEdit/PostEdit.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 100px;
   padding-top: 80px;
+  background-color: #F9ECDC;
 }
 
 .image-container {
@@ -50,7 +51,7 @@
   height: 40px;
   width: 200px;
   margin-top: 40px;
-  background-color: black;
+  background-color: #0f344f;
   color: white;
   border: none;
   box-shadow: 2px 2px 10px 2px #cecece;
