--- a/client/src/components/shared/Header/Header.css
+++ b/client/src/components/shared/Header/Header.css
@@ -1,6 +1,6 @@
 .Header {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 0 auto;
   margin-bottom: 0px;
   width: 100%;
@@ -10,26 +10,26 @@
   border-bottom: 1px solid #CFCFCF;
   box-shadow: 1px 1px 4px #cfcfcf;
   background: 	#0f344f;
-  padding-left: 30px;
-  justify-content: space-around;
+  padding-left: 35px;
+  padding-right: 35px;
   padding-top: 20px;
-  font: Comfortaa;
-  /* font-family: 'Comfortaa', cursive; */
-  
-}
-
-.clickup-chrome-ext_installed {
-  font-family: 'Comfortaa', cursive; 
 }
 
 .header-links {
   text-decoration: none;
   color: white;
-  font-family: 'Comfortaa', cursive !important;
+}
+
+.links {
+  font-size: 20px;
+  text-align: center;
+  padding-right: 200px;
+  padding-top: 8px;
 }
 
 #header-title{
-  font-size: 25px;
+  font-size: 32px;
   color: 	#ecc28d;
   font-weight: bolder;
+  padding-left: 150px;
 }
