--- a/client/src/screens/PostEdit/PostEdit.css
+++ b/client/src/screens/PostEdit/PostEdit.css
@@ -2,7 +2,7 @@
   display: flex;
   padding: 100px;
   padding-top: 80px;
-  background-color: #F9ECDC;
+  background-color: #f9ecdc;
   margin-top: -50px;
   width: 80%;
 }
@@ -11,6 +11,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  margin: 15px;
+  text-align: center;
+  box-shadow: 5px 5px 15px #b45c03;
+  border-radius: 15px;
+  padding-top: 15px;
 }
 
 .edit-post-image {
@@ -24,16 +30,15 @@
   width: 300px;
   text-align: center;
   font-size: 20px;
-  font-family: "";
+
+  margin-bottom: 10px;
 }
 
 .edit-form {
-  font-family: "";
   line-height: 1.6;
 }
 
 .input-name {
-  font-family: "";
   font-size: 16px;
   padding: 10px;
   letter-spacing: 0.9px;
@@ -41,7 +46,6 @@
 }
 
 .textarea-content {
-  font-family: "";
   font-size: 16px;
   padding: 10px;
   letter-spacing: 0.9px;
@@ -50,7 +54,7 @@
 
 .save-button {
   font-size: 22px;
-  font-family: "";
+
   height: 40px;
   width: 200px;
   margin-top: 40px;
